--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -10,46 +10,44 @@
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="alternate" type="application/rss+xml" title="{{siteTitle}}" href="{{feedHref}}" />
   <link href="index.css" rel="stylesheet" />
-  <!-- %before-head-end.html% -->
 </head>
 
 <body>
-<!-- %after-body-begin.html% -->
-  {{#each dates}}
-  <section class="daily-content">
-    <h2 class="daily-heading"><time datatime="{{isoPublishDate}}">{{isoPublishDate}}</time></h2>
-    <ul class="sources card">
-      {{#each sources}}
-      <li class="source">
-        <section>
-          <h3 class="source-name"><a class="source-name__link" href="{{siteUrl}}">{{title}}</a></h3>
-          <section class="articles-per-source">
-            {{#each articles}}
-            <article>
-              <details class="article-expander">
-                <summary class="article-expander__title">{{title}}</summary>
-                <a class="article-summary-link article-summary-box-outer" href="{{link}}">
-                  <div class="article-summary-box-inner">
-                    <span class="article-reading-time">({{readingTimeInMin}} min)</span>
-                    <span>{{description}}</span>
-                  </div>
-                </a>
-              </details>
-            </article>
-            {{/each}}
-        </section>
-      </li>
-      {{/each}}
-    </ul>
-  </section>
-  {{/each}}
+  <header>
+    <dl>
+      <dt><b>Site title</b></dt><dd>{{siteTitle}}</dd>
+      <dt><b>Built on</b></dt><dd>{{siteBuildTimestamp}}</dd>
+      <dt><b>Cli version</b></dt><dd>{{cliVersion}}</dd>
+      <dt><b>Documentation URL</b></dt><dd>{{projectUrl}}</dd>
+    </dl>
+  </header>
 
-  <footer>
-    <time id="build-timestamp" datetime="{{siteBuildTimestamp}}">{{siteBuildTimestamp}}</time>
-    <span><a class="footer-link" href="{{projectUrl}}">osmosfeed {{cliVersion}}</a></span>
-  </footer>
-  <script src="index.js"></script>
-  <!-- %before-body-end.html% -->
+
+  <ul>
+  {{#each dates}}
+    <li>
+      <section>
+      <h1>{{isoPublishDate}}</h1>
+
+      {{#each articles}}
+      <article>
+          <h2><a href={{link}}>{{title}}</a></h2>
+          <div>
+            <span>Source: <a href={{source.siteUrl}}>{{source.title}}</a></span> | 
+            <span>Date: <time>{{isoPublishDate}}</time></span> |
+            <span>Timestamp: <time>{{publishedOn}}</time></span> |
+            <span>Reading time: <time>{{readingTimeInMin}} min</time></span> |
+            <span>Word count: <time>{{wordCount}}</time></span>
+          </div>
+          <p>{{description}}</p>
+        </details>
+      </article>
+      {{/each}}
+
+      </section>
+    </li>
+  {{/each}}
+  </ul>
 </body>
 
 </html>
