--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -48,6 +48,6 @@
     </li>
   {{/each}}
   </ul>
-  <script src="../static/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
