--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -11,10 +11,10 @@
   </head>
 
   <body>
-    <ul>
+    <div>
       {{#each dates}}
       <!-- 日付データの数だけ繰り返し -->
-      <li>
+      <div>
         <section>
           <div>{{isoPublishDate}}</div>
 
@@ -28,10 +28,10 @@
           </article>
           {{/each}}
         </section>
-      </li>
+      </div>
       {{/each}}
       <!-- 日付データの数だけ繰り返し -->
-    </ul>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
