--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,64 @@
-p {
-  color: rgb(80, 80, 80);
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #d8dee9;
+}
+.news__ttl {
+  background-color: #2e3440;
+  color: #d8dee9;
+  text-align: center;
+  padding: 10px;
+}
+.news__unit {
+  margin: 0;
+}
+.news__unit_item {
+  height: 400px;
+  overflow-y: scroll;
+  position: relative;
+  background-color: #3b4252;
+  border-radius: 5px;
+  margin-top: 35px;
+}
+.news__unit_item_date {
+  position: sticky;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: #2e3440;
+  color: #d8dee9;
+  padding: 7px 15px;
+}
+.news__unit_item_body {
+  padding: 12px;
+  border-bottom: solid 1px #4c566a;
+}
+.news__unit_item_body_ttl {
+  font-size: 14px;
+}
+.news__unit_item_body_src {
+  font-size: 10px;
+}
+
+a {
+  color: #88c0d0;
+  text-decoration: none;
+}
+a:hover {
+  opacity: 0.7;
+}
+a:visited {
+  color: #b48ead;
+}
+/* =============================================
+　カスタムスクロールバー
+============================================= */
+::-webkit-scrollbar {
+  width: 5px;
+  background: #e5e9f0;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #4c566a;
+  border-radius: 5px;
 }
