--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="index.css" rel="stylesheet" />
   </head>
 
@@ -14,10 +15,10 @@
     <!-- =============================================
         ニュースフィーダー部分
     ============================================= -->
-    <div class="news__unit">
-      <div class="news__unit_inner">
+    <div class="news__unit swiper-container">
+      <div class="news__unit_inner swiper-wrapper">
         {{#each dates}}
-        <div class="news__unit_item">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">{{isoPublishDate}}</div>
           {{#each articles}}
           <div class="news__unit_item_body">
@@ -32,6 +33,7 @@
     <!-- =============================================
         ニュースフィーダー部分
     ============================================= -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
