--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <div class="news__ttl">●●●●タイトル●●●●</div>
     <!-- =============================================
         ニュースフィーダー部分
     ============================================= -->
