--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -23,7 +23,7 @@
           {{#each articles}}
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="{{link}}">{{title}}</a></div>
-            <div class="news__unit_item_body_src">Source: <a href="{{source.siteUrl}}">{{source.title}}</a></div>
+            <div class="news__unit_item_body_src">Source: <a href="{{source.siteUrl}}" rel="nofollow noopener noreferrer" target="_blank">{{source.title}}</a></div>
           </div>
           {{/each}}
         </div>
