--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -29,6 +29,8 @@
         </div>
         {{/each}}
       </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
     <!-- =============================================
         ニュースフィーダー部分
