--- a/index.css
+++ b/index.css
@@ -67,5 +67,5 @@ a:visited {
 　スワイパー
 ============================================= */
 .swiper-button-next, .swiper-button-prev{
- color: #4C566A important!;
+ color: #4C566A !important;
 }
