--- a/index.css
+++ b/index.css
@@ -68,4 +68,6 @@ a:visited {
 ============================================= */
 .swiper-button-next, .swiper-button-prev{
  color: #5E81AC;
+ bottom: 20px;
+ top: auto;
 }
