--- a/static/index.css
+++ b/static/index.css
@@ -68,4 +68,8 @@ a:visited {
 ============================================= */
 .swiper-button-next, .swiper-button-prev{
  color: #5E81AC;
+ background-color: #D8DEE9;
+ width: 75px;
+ height: 75px;
+ border-radius: 50px;
 }
